--- a/Board.html
+++ b/Board.html
@@ -2,7 +2,11 @@
 <html>
 <link>
 <head>
-<link href="css/CSS HOA FINAL.css" rel="stylesheet" type="text/css">
+<link href="index.html" rel="stylesheet" type="text/css">
+<link href="Board.html" rel="stylesheet" type="text/css">
+<link href="Committees.html" rel="stylesheet" type="text/css">
+<link href="Covenants.html" rel="stylesheet" type="text/css">
+<link href="FAQs.html" rel="stylesheet" type="text/css">
 <meta charset="utf-8">
 <title>Prarie Fields</title>
 </head>
@@ -12,7 +16,7 @@
 		<div class="topleft"></div>
 	<nav id="nav_menu"> 
 	  <ul>	
-		  		<li><a href="Prarie Fields HOA Final.html">Home</a></li>
+		  		<li><a href="index.html">Home</a></li>
 		  	
 				<li><a href="Board.html" class="current">Board</a></li>
 		  
