--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <link>
 <head>
-<link href="css/CSS HOA FINAL.css" rel="stylesheet" type="text/css">
+<link href="index.html" rel="stylesheet" type="text/css">
 <link href="Board.html" rel="stylesheet" type="text/css">
 <link href="Committees.html" rel="stylesheet" type="text/css">
 <link href="Covenants.html" rel="stylesheet" type="text/css">
@@ -16,7 +16,7 @@
 		<div class="topleft"></div>
 	<nav id="nav_menu"> 
 	  <ul>	
-		  		<li><a href="Prarie Fields HOA Final.html" class="current">Home</a></li>
+		  		<li><a href="index.html" class="current">Home</a></li>
 		  	
 				<li><a href="Board.html">Board</a></li>
 		  
