--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <link>
 <head>
 <link href="css/index.html" rel="stylesheet" type="text/css">
+<link href="Board.html" rel="stylesheet" type="text/css">
+<link href="Committees.html" rel="stylesheet" type="text/css">
+<link href="Covenants.html" rel="stylesheet" type="text/css">
+<link href="FAQs.html" rel="stylesheet" type="text/css">
 <meta charset="utf-8">
 <title>Prarie Fields</title>
 </head>
