--- a/Board.html
+++ b/Board.html
@@ -1,8 +1,8 @@
 <html>
 <link>
 <head>
+<link href="index.html" rel="stylesheet" type="text/css">
 <link href="css/CSS HOA FINAL.css" rel="stylesheet" type="text/css">
-<link href="Board.html" rel="stylesheet" type="text/css">
 <link href="Committees.html" rel="stylesheet" type="text/css">
 <link href="Covenants.html" rel="stylesheet" type="text/css">
 <link href="FAQs.html" rel="stylesheet" type="text/css">
