--- a/Covenants.html
+++ b/Covenants.html
@@ -2,10 +2,10 @@
 <html>
 <link>
 <head>
-<link href="css/CSS HOA FINAL.css" rel="stylesheet" type="text/css">
+<link href="index.html" rel="stylesheet" type="text/css">
 <link href="Board.html" rel="stylesheet" type="text/css">
 <link href="Committees.html" rel="stylesheet" type="text/css">
-<link href="Covenants.html" rel="stylesheet" type="text/css">
+<link href="css/CSS HOA FINAL.css" rel="stylesheet" type="text/css">
 <link href="FAQs.html" rel="stylesheet" type="text/css">
 <meta charset="utf-8">
 <title>Prarie Fields</title>
