progress on final
final progress

--- a/Committees.html
+++ b/Committees.html
@@ -47,26 +47,29 @@
 	  <h1 class="title" style="font: 'alex-brush'">Committees<br>
       </h1>
 	</center>
-	<h4 class="CommitteesText" width="400">
-	The Prairie Fields HOA has a number of committees to assist in exploring issues, running an annual election, hosting neighborhood events, and more.  Click on the name of each committee below for more information, or send an email to board@prairiefields.org to volunteer on a committee.
-	<br>Architectural Control Committee
-	<br>The goal of the Architectural Control committee is to preserve the property values of all homeowners in Prairie Fields, and to ensure compliance with applicable covenants when a homeowner makes changes to their property. 
+		<div class="CommitteesText" width="400">
+			<h3> 
+				<center>The Prairie Fields HOA has a number of committees to assist in exploring issues, running an annual election, hosting neighborhood events, and more. Send an email to board@prairiefields.org to volunteer on a committee.</center></h3>
+				<br><h2> Architectural Control Committee</h2>
+				<br>The goal of the Architectural Control committee is to preserve the property values of all homeowners in Prairie Fields, and to ensure compliance with applicable covenants when a homeowner makes changes to their property. 
+	
+				<br><h2>Communications Committee</h2>
+				<br>The Communications Committee is responsible for facilitating communications with residents of Prairie Fields, including an Annual Newsletter, maintaining this website and a facebook group, and sending monthly email updates.
 
-	<br>Communications Committee
-	<br>The Communications Committee is responsible for facilitating communications with residents of Prairie Fields, including an Annual Newsletter, maintaining this website and a facebook group, and sending monthly email updates.
+				<br><h2>Election Committee</h2>
+				<br>The Election Committee is responsible for running an annual election of the homeowners within Prairie Fields.  
+		
+				<br><h2>Events Committee</h2>
+				<br>The Events Committee is responsible for organizing events for residents of Prairie Fields.
 
-	<br>Election Committee
-	<br>The Election Committee is responsible for running an annual election of the homeowners within Prairie Fields.  
+				<br><h2>Welcoming Committee</h2>
+				<br>The Welcoming committee is responsible for welcoming new residents to Prairie Fields.   
+			
+		</div>
 
-	<br>Events Committee
-	<br>The Events Committee is responsible for organizing events for residents of Prairie Fields.
-
-	<br>Welcoming Committee
-	<br>The Welcoming committee is responsible for welcoming new residents to Prairie Fields.   
-	</h4>
-
-	<h2>NEWS</h2>
-
+	<div class="newshead">
+		<h2>NEWS</h2>
+	</div>
 	<p class="news1"><font color="orange">New HOA board members
 <br>12/6/2017</font>
 <br>Welcome new board members
