--- a/Covenants.html
+++ b/Covenants.html
@@ -60,7 +60,9 @@
 	<br>Form to request covenant enforcement
 	<br>Covenants will be enforced by the Board if there is a specific complaint submitted to the board according to the Covenant Enforcement Policy.  If you would like to make a complaint or covenant enforcement request to the HOA Board, please fill out the Covenant Enforcement Form.  Note that the information submitted will not be published on this website, but it will be used by the Board of Directors as they investigate the complaint.</h4>
 
-	<h2>NEWS</h2>
+	<div class="newshead">
+		<h2>NEWS</h2>
+	</div>
 
 	<p class="news1"><font color="orange">New HOA board members
 <br>12/6/2017</font>
