--- a/FAQs.html
+++ b/FAQs.html
@@ -62,7 +62,9 @@
 	
 	</h3>
 
-	<h2>NEWS</h2>
+	<div class="newshead">
+		<h2>NEWS</h2>
+	</div>
 
 	<p class="news1"><font color="orange">New HOA board members
 <br>12/6/2017</font>
