--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
 	<center>
 	  <img src="Images/2324679950f65171c1ea1c1f62dac194.jpg" alt="park" class="park">
 	</center>
-
-	<h2>NEWS</h2>
-
+	
+	<div class="newshead">
+		<h2>NEWS</h2>
+	</div>
 	<p class="news1"><font color="orange">New HOA board members
 <br>12/6/2017</font>
 <br>Welcome new board members
