--- a/Board.html
+++ b/Board.html
@@ -47,37 +47,45 @@
       </h1>
 	</center>
 	
-	<div class="BlackGirl">
-    	<img src="Images/black girl.jpg" alt="pic" width="174" height="174">
-    	<div class="scroll"><p>MariAnne Schmidt- ACC<br> 415 Trefoil Street<br> Office Administrator at FedEx Ground<br><br> HOA goals:<br> <li>A set calendar schedule of events.</li> <li>Create a sense of community among neighbors</li></p></div>
+		<div class="BlackGirl">
+    		<img src="Images/black girl.jpg" alt="pic" width="174" height="174">
+    			<div class="scroll"><p>MariAnne Schmidt- ACC<br> 415 Trefoil Street<br> Office Administrator at FedEx Ground<br><br> HOA goals:<br> <li>A set calendar schedule of events.</li> <li>Create a sense of community among neighbors. </li></p>
+				</div>
+		</div>
+		<div class="glasses">
+    		<img src="Images/glasses.jpg" alt="pic" width="174" height="174">
+				<div class="scroll1"><p>809 Bergamot Drive<br> Associate Director of Technology<br> for the Information Trust Institute at the University of Illinois.<br><br>HOA goals:   <br><li>Continue to preserve the overall appeal of the Prairie Fields subdivision.</li> <li>Address concerns of residents and work to maintain a high-quality living experience.</li><li>Enhance the community feel and engagement through interactions.</li><li>Provide a way to engage with an open dialog on what residents really want in moving this neighborhood forward</li></p>
+			</div>
+		</div>
+		<div class="grin">
+    		<img src="Images/grin.jpg" alt="pic" width="174" height="174">
+				<div class="scroll2"><p>303 Trefoil Street<br> U.S. Consumer Group Manager<br> at Horizon Hobby <br><br>HOA goals: <li> Establish measureable annual and long term goals for Prairies Fields</li><li> Increase participation on Nextdoor.com to benefit neighborhood safety, communication, and a greater sense of community</li><li> Increase PFHOA education and participation in future association decisions</li></p>
+				</div>
+		</div>
+		<div class="kid">
+    		<img src="Images/kid.jpg" alt="pic" width="150" height="174">
+				<div class="scroll3"><p>201 Sunflower Street <br> Regional Finance Professional<br> at Campus Crusade for Christ<br><br>HOA goals:<li>Offer residents discounted lawn care, weed control, etc. by making group agreements and discounts with local companies</li><li> Enforce current rules and regulations</li><li>Establish lawn care bags</li><li> Pickup lower HOA dues.</li></p>
+				</div>
+		</div>
+		<div class="pinkshirt">
+    		<img src="Images/pink shirt.jpg" alt="pic" width="174" height="174">
+				<div class="scroll4"><p>606A Sunflower Street<br> Real Estate Appraiser and Realtor<br> at Champaign County Realtor<br><br>HOA goals: <li>Continue preserving and maintaining the overall appeal and desirability of Prairie Fields, while being vigilant of issues or conditions that may affect the quality of living.</li><li> Maintain a healthy reserve in the Prairie Fields operations account, and collaborate on new ideas to improve our community, and increase property values.</li><li> See a permanent solution to the drainage field on the East end of Prairie Fields Park, along First St; perhaps a fish-stocked retention pond, for fishing derbies, paddle boating, and ice skating (in approved safety conditions).</li></p>
+				</div>
+		</div>
+		<div class="unnamed">
+    		<img src="Images/unnamed.jpeg" alt="pic" width="174" height="174">
+				<div class="scroll5">
+    			<p>22 Parsley Drive<br> Architect at Architectural<br> Expressions, LLP<br><br>HOA goals:<li> Continue to maintain and protect the character and desirability of our neighborhood as commercial development continues in Savoy</li><li> Gauge interest among Prairie Field's residents about contracting with a single waste disposal/recycling company to provide service to the entire subdivision at a discounted rate and solicit bids</li><li> Work with residents to develop a wish list and schedule for capital improvement projects that may be completed with minimal or no increase to annual assessments.</li></p>
+				</div>
+		</div>
+		<div class="blueshirt">
+    		<img src="Images/blueshirt.jpeg" alt="pic" width="174" height="174">
+				<div class="scroll6"><p>409 Trefoil Street<br> Assistant Director Web and<br> Application Development at University<br> of Illinois<br><br>HOA goals:<li>Establish a neighborhood watch</li><li>  Increased transparency of fund use</li></p>
+				</div>
+		</div>
+	<div class="newshead">
+		<h2>NEWS</h2>
 	</div>
-	<div class="glasses">
-    	<img src="Images/glasses.jpg" alt="pic" width="174" height="174">
-    	<p>809 Bergamot Drive<br> Associate Director of Technology<br> for the Information Trust<br> Institute at the University of Illinois</p>
-	</div>
-	<div class="grin">
-    	<img src="Images/grin.jpg" alt="pic" width="174" height="174">
-    	<p>303 Trefoil Street<br> U.S. Consumer Group Manager<br> at Horizon Hobby</p>
-	</div>
-	<div class="kid">
-    	<img src="Images/kid.jpg" alt="pic" width="150" height="174">
-    	<p>201 Sunflower Street <br> Regional Finance Professional<br> at Campus Crusade for Christ</p>
-	</div>
-	<div class="pinkshirt">
-    	<img src="Images/pink shirt.jpg" alt="pic" width="174" height="174">
-    	<p>606A Sunflower Street<br> Real Estate Appraiser and Realtor<br> at Champaign County Realtor</p>
-	</div>
-	<div class="unnamed">
-    	<img src="Images/unnamed.jpeg" alt="pic" width="174" height="174">
-    	<p>22 Parsley Drive<br> Architect at Architectural<br> Expressions, LLP</p>
-	</div>
-	<div class="blueshirt">
-    	<img src="Images/blueshirt.jpeg" alt="pic" width="174" height="174">
-    	<p>409 Trefoil Street<br> Assistant Director Web and<br> Application Development at University<br> of Illinois</p>
-	</div>
-
-	<h2>NEWS</h2>
-
 	<p class="news1"><font color="orange">New HOA board members
 <br>12/6/2017</font>
 <br>Welcome new board members
