--- a/Covenants.html
+++ b/Covenants.html
@@ -48,17 +48,7 @@
       </h1>
 	</center>
 	<h4 class="CovenantsText">
-	<br>Covenants are legal documents that lay out the guidelines for the planned community. 
-	The Covenants are recorded in the county records in the county where the property is located and are legally binding. This means that when you purchase a lot or a home in Prairie Fields you automatically become a member of the HOA.  The Covenants, which were established by the builder, are the rules of the Prairie Fields neighborhood. They govern what you can, cannot, or must do with respect to your home.
-
-	<br>Which covenants apply to my phase?
-	<br>Each covenant applies to a single Phase. See the Prairie Field Phase page to find out what Phase your house belongs to.  To access the Covenant files, click here.
-
-	<br>How are covenants enforced? 
-	<br>At the 9/20/10 Board of Directors meeting, the Board officially approved a Covenant Enforcement Policy.  The purpose of the policy is to clarify the way in which the Board plans to enforce covenants, and to clarify the procedures for enforcement of the covenants.  At this time, only complaints which are brought to the Board and which comply with the policy will be acted on.  
-
-	<br>Form to request covenant enforcement
-	<br>Covenants will be enforced by the Board if there is a specific complaint submitted to the board according to the Covenant Enforcement Policy.  If you would like to make a complaint or covenant enforcement request to the HOA Board, please fill out the Covenant Enforcement Form.  Note that the information submitted will not be published on this website, but it will be used by the Board of Directors as they investigate the complaint.</h4>
+	The covenants are recorded in the county records where the property is located and are legally binding. This means that when you purchase a lot or a home in Prairie Fields you automatically become a member of the HOA. The Covenants, which were established by the builder, are the rules of the Prairie Fields neighborhood. They govern what you can, cannot, or must do with respect to your home.</h4>
 
 	<div class="newshead">
 		<h2>NEWS</h2>
