--- a/Committees.html
+++ b/Committees.html
@@ -44,7 +44,7 @@
 		
 	</div>
 	<center>
-	  <h1 class="title" style="font: 'alex-brush'">Committees<br>
+	  <h1 class="comtitle" style="font: 'alex-brush'">Committees<br>
       </h1>
 	</center>
 		<div class="CommitteesText" width="400">
