--- a/Covenants.html
+++ b/Covenants.html
@@ -30,8 +30,9 @@
 	  </ul>
 		
 </nav>
-	<br>
-	<br>
+			<img src="Images/Covenantphase-map.jpg"alt="map" class="map">
+		<br>
+		<br>
 	<div class="icons;">
 	  
 		<a href="https://www.facebook.com/PFHOA" class="icons1">
@@ -44,12 +45,14 @@
 		
 	</div>
 	<center>
-	  <h1 class="title" style="font: 'alex-brush'">Covenants<br>
+	  <h1 class="covtitle" style="font: 'alex-brush'">Covenants<br>
       </h1>
 	</center>
-	<h4 class="CovenantsText">
-	The covenants are recorded in the county records where the property is located and are legally binding. This means that when you purchase a lot or a home in Prairie Fields you automatically become a member of the HOA. The Covenants, which were established by the builder, are the rules of the Prairie Fields neighborhood. They govern what you can, cannot, or must do with respect to your home.</h4>
-
+	<h2 class="covabout">About</h2>
+	<h2 class="plattitle">Plat &#38; Covenants </h2>
+	<h2 class="CovenantsText">
+	The covenants are recorded in the county records where the property is located and are legally binding. This means that when you purchase a lot or a home in Prairie Fields you automatically become a member of the HOA. The Covenants, which were established by the builder, are the rules of the Prairie Fields neighborhood. They govern what you can, cannot, or must do with respect to your home.</h2>
+	<h2 class="plat">Phase 1<br>Phase 2<br>Phase 3<br>Phase 4<br>Phase 5a<br>Phase 5b<br>Phase 6<br>Phase 7<br>Phase 8<br>Phase 9<br>Phase 10<br>Phase 11<br>Phase 12<br>Phase 13</h2>
 	<div class="newshead">
 		<h2>NEWS</h2>
 	</div>
