--- a/FAQs.html
+++ b/FAQs.html
@@ -53,7 +53,7 @@
 	</center>
 	
 	<h3 class="FAQS">
-		<br>HOA<br><br>
+		<font color="#25B3F8"><br>HOA<br><br></font>
 		<font color="#CC3739">Am I a member of the Prairie Fields Homeowners Association (PF HOA)?</font>
 		<br>If you own property within the Prairie Fields subdivision, then you are a member of PF HOA.  When you purchased your property in Prairie Fields, you automatically became a member of the PF HOA.<br>
 		<br><font color="#CC3739">What are the advantages of an active Homeowners Association?</font>
@@ -63,11 +63,11 @@
 		<br><font color="#CC3739">What is the history of Prairie Fields Homeowners Association (PF HOA)? </font>
 		<br>The PF HOA was incorporated in 1996 by the developer of Prairie Fields subdivision.  From 1996 to 2008, the developer performed and paid for all services of the HOA.  Starting in 2009, the developer transitioned the association to a resident run, resident funded HOA, and in the fall of 2009 the residents of Prairie Fields elected a Board of Directors (BOD).
 		<br>
-	<br>Getting Involved<br><br>
+	<font color="#25B3F8"><br>Getting Involved<br><br></font>
 		<font color="#CC3739">What committees does the HOA have?  How do I get involved with a committee?</font>
 		<br>To volunteer for any committee, attend a committee meeting or email board@prairiefieldshoa.com.  Or, email events@prairiefieldshoa.com to volunteer for the Neighborhood Events committee or to help with one of the HOA events.<br>
 	
-	<br>Dues and Budget<br><br>
+	<font color="#25B3F8"><br>Dues and Budgets<br><br></font>
 		<font color="#CC3739">Why did I receive an invoice?  </font>
 		<br>This year, the BOD established an Annual Assessment at $100.00 for all dwelling units.<br>
 		<br><font color="#CC3739">Isn't $100.00 awful high for an Annual Assessment.</font>
@@ -79,7 +79,7 @@
 		<br><font color="#CC3739">How do I get a dues statement?</font>
 		<br>If you are selling your home in Prairie Fields and need a closing letter, statement of accounts, or other closing documents related to HOA dues, click here to email our accountant.<br>
 		
-	<br>Covenants<br><br>
+	<font color="#25B3F8"><br>Covenants<br><br></font>
 		<font color="#CC3739">Are there any rules or regulations which apply to my property?</font>
 		<br>If you are selling your home in Prairie Fields and need a closing letter, statement of accounts, or other closing documents related to HOA dues, click here to email our accountant.<br>
 		<br><font color="#CC3739">How is the HOA going to enforce covenants?</font>
@@ -87,17 +87,17 @@
 		<br><font color="#CC3739">What is covenant consolidation?</font>
 		<br>Because each phase of the subdivision has different covenants, the Board of Directors has a committee evaluating consolidating the different covenants into one set which would apply to all homes in PF.  The consolidated covenants would have to be approved by 75% of the residents of each phase of PF, which won’t be easy.  Email board@prairiefieldshoa.com to volunteer for the Covenant Consolidation Committee.<br>
 		<br><font color="#CC3739">Does the HOA have any regulations of Satallites, Antennas, Solar Panels, or Windmills?</font>The Prairie Fields HOA does not regulate any of these items.  The US Supreme Court has ruled that homeowners associations cannot restrict reasonably sized antenna or satallites.  However, the Village of Savoy does have restrictions on both Solar Panels and Windmills.  Windmills generally must be positioned so that they do not fall onto a neighbor’s property.  The Village of Savoy also has restrictions about height of windmills.  Also, the FAA regulates airspace within the flight approach to Willard Airport.  Contact Dan Davies at the Village of Savoy for more information.<br>
-	<br>Landscaping<br><br>
+	<font color="#25B3F8"><br>Landscaping<br><br></font>
 		<br><font color="#CC3739">How does the Board of Directors (BOD) choose who mows or provides other services within Prairie Fields?</font>
 		<br>For large purchases, the BOD solicits a minimum of 3 bids.  The BOD evaluates bids on the basis of best overall value.  <br>
-	<br>Maintenance<br><br>
+	<font color="#25B3F8"><br>Maintenance<br><br></font>
 		<br><font color="#CC3739">Do I have to remove snow from the sidewalks?</font>
 		<br>The HOA asks that you keep sidewalks clean and safe, especially for the children walking to school. However, neither the HOA nor the Village of Savoy has any snow removal ordinances.   <br>
 		<br><font color="#CC3739">What do I do if a street light is burnt out?</font>
 		<br>The street lights in Prairie Fields are owned and maintained by Ameren, and the Village of Savoy “rents” them.  Please contact Brett Maue, the Public Works Director/Village Engineer, and he will send a maintenance request to Ameren.<br>
 		<br><font color="#CC3739">Do I need permission to plant trees on my property?  </font>
 		<br>Only if you wish to plant in the right-of-way, which is between the street and sidewalk.  In that case, you will need approval from the Village of Savoy Arborist.  The Village, if funds are available, can reimburse the property owner for half of the total cost of purchase and installation of the tree up to $100.00 for each tree installed through the Village Right-of-Way Tree Cost Share Program.<br>
-	<br>Parking<br><br>
+	<font color="#25B3F8"><br>Parking<br><br></font>
 		<br><font color="#CC3739">Can I park on the street?</font>
 		<br>As a resident, you are required to park all of your vehicles in your garage or driveway. The Covenants state that "All property owners shall provide and use at all times off-street parking for the number of automobiles in use by the owner or resident on the property…”  
 ​
