--- a/Form.html
+++ b/Form.html
@@ -82,6 +82,7 @@ input[type=submit]:hover {
 }
 
 .container {
+	width: 400px;
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
@@ -91,7 +92,8 @@ input[type=submit]:hover {
 }
 </style>
 <body>
-
+<h3 class= "ourlocation">Our Location</h3>
+<h3 class="questions">Questions/Concerns</h3>
 <h3>Contact Form</h3>
 
 <div class="container">
@@ -112,9 +114,8 @@ input[type=submit]:hover {
     <input type="submit" value="Submit">
   </form>
 </div>
-	<div class="newshead">
+	<iframe class="MapG" width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/view?zoom=17&center=40.0568%2C-88.2425&key=AIzaSyCHVxVMMxgQev80z2xDT4mUxA3ag3gyqL0" allowfullscreen></iframe>
 		<h2>NEWS</h2>
-	</div>
 	<p class="news1"><font color="orange">New HOA board members
 <br>12/6/2017</font>
 <br>Welcome new board members
